--- a/src/main/resources/fxml/scheduler.fxml
+++ b/src/main/resources/fxml/scheduler.fxml
@@ -8,113 +8,111 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#36465d" height="758.0" layoutY="-1.0" stroke="TRANSPARENT" strokeType="INSIDE" width="1202.0" AnchorPane.bottomAnchor="-7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="-1.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="758.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="202.0" AnchorPane.bottomAnchor="-7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="-1.0" />
-      <Accordion layoutY="65.0" prefHeight="690.0" prefWidth="202.0">
-        <panes>
-          <TitledPane animated="false" prefHeight="631.0" prefWidth="202.0" style="-fx-background-color: blue;" text="First Label">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
+      <Group fx:id="sidePanel">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="758.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="202.0" />
+            <Accordion layoutX="-1.0" layoutY="66.0" prefHeight="616.0" prefWidth="202.0">
+              <panes>
+                <TitledPane animated="false" prefHeight="631.0" prefWidth="202.0" style="-fx-background-color: blue;" text="First Label">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+                     <font>
+                        <Font name="Avenir Roman" size="13.0" />
+                     </font>
+                     <effect>
+                        <Blend />
+                     </effect>
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                </TitledPane>
+                <TitledPane animated="false" text="Second Label">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+                     <font>
+                        <Font name="Avenir Roman" size="13.0" />
+                     </font>
+                </TitledPane>
+                <TitledPane animated="false" prefHeight="640.0" prefWidth="211.0" text="Third Label">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="582.0" prefWidth="200.0" />
+                  </content>
+                     <font>
+                        <Font name="Avenir Roman" size="13.0" />
+                     </font>
+                </TitledPane>
+              </panes>
+            </Accordion>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="66.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="202.0" />
+            <Text layoutX="26.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scheduler">
                <font>
-                  <Font name="Avenir Roman" size="13.0" />
+                  <Font name="Avenir Roman" size="32.0" />
                </font>
-               <effect>
-                  <Blend />
-               </effect>
-               <cursor>
-                  <Cursor fx:constant="DEFAULT" />
-               </cursor>
-          </TitledPane>
-          <TitledPane animated="false" text="Second Label">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
+            </Text>
+         </children>
+      </Group>
+      <Group fx:id="calendar">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4b6180" height="634.0" layoutX="244.0" layoutY="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="655.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#79879a" height="60.0" layoutX="245.0" layoutY="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="654.0" />
+            <Text fill="WHITE" layoutX="488.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Winter Term">
                <font>
-                  <Font name="Avenir Roman" size="13.0" />
+                  <Font name="Avenir Roman" size="32.0" />
                </font>
-          </TitledPane>
-          <TitledPane animated="false" prefHeight="640.0" prefWidth="211.0" text="Third Label">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="582.0" prefWidth="200.0" />
-            </content>
+            </Text>
+            <Text fill="WHITE" layoutX="271.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Monday">
                <font>
-                  <Font name="Avenir Roman" size="13.0" />
+                  <Font name="Avenir Roman" size="17.0" />
                </font>
-          </TitledPane>
-        </panes>
-      </Accordion>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="66.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="202.0" AnchorPane.bottomAnchor="684.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="998.0" AnchorPane.topAnchor="0.0" />
-      <Text layoutX="24.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scheduler">
-         <font>
-            <Font name="Avenir Roman" size="32.0" />
-         </font>
-      </Text>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4b6180" height="634.0" layoutX="244.0" layoutY="87.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="655.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4b6180" height="632.0" layoutX="928.0" layoutY="86.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="224.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4b6180" height="34.0" layoutX="243.0" layoutY="34.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="106.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4b6180" height="34.0" layoutX="367.0" layoutY="34.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="106.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4b6180" height="34.0" layoutX="488.0" layoutY="34.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="106.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#79879a" height="34.0" layoutX="1037.0" layoutY="34.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="116.0" />
-      <Text fill="#eeecec" layoutX="970.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Feedback">
-         <font>
-            <Font name="Avenir Roman" size="19.0" />
-         </font>
-      </Text>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#79879a" height="60.0" layoutX="245.0" layoutY="86.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="655.0" />
-      <Text fill="WHITE" layoutX="487.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Winter Term">
-         <font>
-            <Font name="Avenir Roman" size="32.0" />
-         </font>
-      </Text>
-      <Text fill="#aeabab" layoutX="267.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grey Tag">
-         <font>
-            <Font name="Avenir Roman" size="17.0" />
-         </font>
-      </Text>
-      <Text fill="#aeabab" layoutX="391.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grey Tag">
-         <font>
-            <Font name="Avenir Roman" size="17.0" />
-         </font>
-      </Text>
-      <Text fill="#aeabab" layoutX="512.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grey Tag">
-         <font>
-            <Font name="Avenir Roman" size="17.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="1048.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="+ New Term">
-         <font>
-            <Font name="Avenir Roman" size="17.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="273.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Monday">
-         <font>
-            <Font name="Avenir Roman" size="17.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="396.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tuesday">
-         <font>
-            <Font name="Avenir Roman" size="17.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="537.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wednesday">
-         <font>
-            <Font name="Avenir Roman" size="17.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="689.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Thursday">
-         <font>
-            <Font name="Avenir Roman" size="17.0" />
-         </font>
-      </Text>
-      <Text fill="WHITE" layoutX="812.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Friday">
-         <font>
-            <Font name="Avenir Roman" size="17.0" />
-         </font>
-      </Text>
-      <Line endX="100.0" layoutX="1043.0" layoutY="146.0" startX="-100.0" stroke="#79879a" strokeWidth="2.0" />
-      <Line endX="800.0" endY="-100.0" layoutX="100.0" layoutY="329.0" startX="145.0" startY="-100.0" stroke="#79879a" />
+            </Text>
+            <Text fill="WHITE" layoutX="398.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tuesday">
+               <font>
+                  <Font name="Avenir Roman" size="17.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="530.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wednesday">
+               <font>
+                  <Font name="Avenir Roman" size="17.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="681.0" layoutY="183.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Thursday">
+               <font>
+                  <Font name="Avenir Roman" size="17.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="814.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Friday">
+               <font>
+                  <Font name="Avenir Roman" size="17.0" />
+               </font>
+            </Text>
+            <Line endX="800.0" endY="200.0" startX="300.0" startY="200.0" stroke="#79879a" />
+         </children>
+      </Group>
+      <Group fx:id="studentFeedback">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4b6180" height="632.0" layoutX="35.0" layoutY="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="224.0" x="900.0" />
+            <Text fill="#eeecec" layoutX="969.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Feedback">
+               <font>
+                  <Font name="Avenir Roman" size="19.0" />
+               </font>
+            </Text>
+            <Line endX="100.0" layoutX="1050.0" layoutY="150.0" startX="-100.0" stroke="#79879a" strokeWidth="2.0" />
+         </children>
+      </Group>
+      <Group layoutX="1050.0" layoutY="40.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#79879a" height="34.0" layoutX="-11.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="116.0" />
+            <Text fill="WHITE" layoutX="-2.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="+ New Term">
+               <font>
+                  <Font name="Avenir Roman" size="17.0" />
+               </font>
+            </Text>
+         </children>
+      </Group>
    </children>
 </AnchorPane>
