Added basic button functionality.

--- a/src/main/resources/fxml/StudentFeedback.fxml
+++ b/src/main/resources/fxml/StudentFeedback.fxml
@@ -18,7 +18,7 @@
       </Text>
       <TextArea fx:id="messageField" layoutX="64.0" layoutY="150.0" prefHeight="250.0" prefWidth="423.0" promptText="Message" />
       <TextField fx:id="subjectField" layoutX="64.0" layoutY="104.0" prefHeight="31.0" prefWidth="423.0" promptText="Subject" />
-      <Button layoutX="106.0" layoutY="443.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="149.0" text="Cancel" />
-      <Button layoutX="298.0" layoutY="443.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="149.0" text="Submit" />
+      <Button fx:id="cancelButton" layoutX="106.0" layoutY="443.0" mnemonicParsing="false" onMouseClicked="#cancelPressed" prefHeight="31.0" prefWidth="149.0" text="Cancel" />
+      <Button fx:id="submitButton" layoutX="298.0" layoutY="443.0" mnemonicParsing="false" onMouseClicked="#submitPressed" prefHeight="31.0" prefWidth="149.0" text="Submit" />
    </children>
 </AnchorPane>
