--- a/src/main/resources/fxml/CoursePreferences.fxml
+++ b/src/main/resources/fxml/CoursePreferences.fxml
@@ -36,7 +36,7 @@
             </Text>
          </children>
       </Group>
-      <Button layoutX="123.0" layoutY="507.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="157.0" text="Cancel" />
-      <Button layoutX="401.0" layoutY="507.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="157.0" text="Submit" />
+      <Button fx:id="cancelButton" layoutX="123.0" layoutY="507.0" mnemonicParsing="false" onMouseClicked="#cancelPressed" prefHeight="31.0" prefWidth="157.0" text="Cancel" />
+      <Button fx:id="submitButton" layoutX="401.0" layoutY="507.0" mnemonicParsing="false" onMouseClicked="#submitPressed" prefHeight="31.0" prefWidth="157.0" text="Submit" />
    </children>
 </Pane>
