--- a/src/main/resources/fxml/TimePreferences.fxml
+++ b/src/main/resources/fxml/TimePreferences.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="675.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="675.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.TimePreferencesController">
    <children>
       <Separator layoutX="209.0" layoutY="51.0" prefHeight="12.0" prefWidth="675.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="51.0" />
       <ScrollPane layoutX="41.0" layoutY="59.0" prefHeight="291.0" prefWidth="663.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="59.0">
@@ -865,9 +865,9 @@
          </content>
       </ScrollPane>
       <Separator layoutX="532.0" layoutY="375.0" prefHeight="12.0" prefWidth="732.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Button layoutX="666.0" layoutY="381.0" mnemonicParsing="false" text="Next" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="25.0" />
-      <Button layoutX="8.0" layoutY="381.0" mnemonicParsing="false" text="Back" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="25.0" />
-      <Button layoutX="333.0" layoutY="381.0" mnemonicParsing="false" text="Cancel" AnchorPane.bottomAnchor="10.0" />
+      <Button fx:id="nextButton" layoutX="666.0" layoutY="381.0" mnemonicParsing="false" onMouseClicked="#nextPressed" text="Next" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="25.0" />
+      <Button fx:id="backButton" layoutX="8.0" layoutY="381.0" mnemonicParsing="false" onMouseClicked="#backPressed" text="Back" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="25.0" />
+      <Button fx:id="cancelButton" layoutX="333.0" layoutY="381.0" mnemonicParsing="false" onMouseClicked="#cancelPressed" text="Cancel" AnchorPane.bottomAnchor="10.0" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="53.0" prefWidth="737.0" text="Time Preferences" textAlignment="CENTER">
          <font>
             <Font size="19.0" />
