--- a/src/main/resources/fxml/Scheduler.fxml
+++ b/src/main/resources/fxml/Scheduler.fxml
@@ -1,55 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#36465d" height="758.0" layoutY="-1.0" stroke="TRANSPARENT" strokeType="INSIDE" width="1202.0" AnchorPane.bottomAnchor="-7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="-1.0" />
       <Group fx:id="sidePanel">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="758.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="202.0" />
-            <Accordion layoutX="-1.0" layoutY="66.0" prefHeight="616.0" prefWidth="202.0">
-              <panes>
-                <TitledPane animated="false" prefHeight="631.0" prefWidth="202.0" style="-fx-background-color: blue;" text="Courses">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                     <font>
-                        <Font name="Avenir Roman" size="13.0" />
-                     </font>
-                     <effect>
-                        <Blend />
-                     </effect>
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                </TitledPane>
-                <TitledPane animated="false" text="Professors">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                     <font>
-                        <Font name="Avenir Roman" size="13.0" />
-                     </font>
-                </TitledPane>
-                <TitledPane animated="false" prefHeight="640.0" prefWidth="211.0" text="Rooms">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="582.0" prefWidth="200.0" />
-                  </content>
-                     <font>
-                        <Font name="Avenir Roman" size="13.0" />
-                     </font>
-                </TitledPane>
-              </panes>
-            </Accordion>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="66.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="202.0" />
+            <Accordion layoutY="65.0" prefHeight="517.0" prefWidth="202.0">
+                    <panes>
+                      <TitledPane fx:id="currentSchedule" animated="false" text="Current Schedule">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <Accordion layoutX="15.0" prefHeight="608.0" prefWidth="238.0">
+                                      <panes>
+                                        <TitledPane animated="false" text="Courses">
+                                          <content>
+                                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                          </content>
+                                        </TitledPane>
+                                        <TitledPane animated="false" text="Faculty">
+                                          <content>
+                                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                          </content>
+                                        </TitledPane>
+                                        <TitledPane animated="false" text="Rooms">
+                                          <content>
+                                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                          </content>
+                                        </TitledPane>
+                                      </panes>
+                                    </Accordion>
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </TitledPane>
+                      <TitledPane fx:id="previousTerms" animated="false" prefHeight="493.0" prefWidth="244.0" text="Previous Terms">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <Accordion layoutX="15.0" prefHeight="606.0" prefWidth="239.0">
+                                      <panes>
+                                        <TitledPane animated="false" text="Winter '17">
+                                          <content>
+                                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                          </content>
+                                        </TitledPane>
+                                        <TitledPane animated="false" text="Fall '16">
+                                          <content>
+                                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                          </content>
+                                        </TitledPane>
+                                        <TitledPane animated="false" text="Spring '16">
+                                          <content>
+                                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                          </content>
+                                        </TitledPane>
+                                          <TitledPane animated="false" text="Winter '16">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </TitledPane>
+                                      </panes>
+                                    </Accordion>
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </TitledPane>
+                    </panes>
+                  </Accordion>
+               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="66.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="202.0" />
             <Text layoutX="26.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scheduler">
                <font>
                   <Font name="Avenir Roman" size="32.0" />
