--- a/src/main/resources/fxml/LogIn.fxml
+++ b/src/main/resources/fxml/LogIn.fxml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<Pane  styleClass="main-panel"
-        xmlns:fx="http://javafx.com/fxml" fx:controller="org.swp.scheduler.LogInController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.LogInController">
    <children>
-      <TextField alignment="TOP_CENTER" editable="false" layoutX="113.0" layoutY="34.0" text="LOGIN">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#233e57" height="400.0" stroke="BLACK" strokeType="INSIDE" width="600.0" />
+      <Text fill="WHITE" layoutX="237.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login">
          <font>
-            <Font name="System Bold" size="31.0" />
+            <Font name="System Bold" size="48.0" />
          </font>
-      </TextField>
-      <PasswordField fx:id="passwordField" layoutX="237.0" layoutY="220.0" promptText="Password" />
-      <TextField fx:id="usernameField" layoutX="237.0" layoutY="159.0" promptText="E-mail" />
-      <Button layoutX="256.0" layoutY="342.0" mnemonicParsing="false" text="Forgot Password?" />
-      <Button onAction="#validateInfo" layoutX="281.0" layoutY="287.0" mnemonicParsing="false" text="Sign In" />
+      </Text>
+      <TextField fx:id="usernameField" layoutX="169.0" layoutY="152.0" prefHeight="25.0" prefWidth="262.0" promptText="E-mail" />
+      <TextField fx:id="passwordField" layoutX="169.0" layoutY="194.0" prefHeight="25.0" prefWidth="262.0" promptText="Password" />
+      <Button fx:id="signInButton" layoutX="237.0" layoutY="253.0" mnemonicParsing="false" onAction="#validateInfo" prefHeight="25.0" prefWidth="126.0" text="Sign In" />
+      <Button layoutX="238.0" layoutY="299.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Forgot Password?" />
    </children>
-</Pane>
+</AnchorPane>
