--- a/src/main/resources/fxml/CoursePreferences.fxml
+++ b/src/main/resources/fxml/CoursePreferences.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="603.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CoursePreferencesController">
+<Pane stylesheets="@../styles/styles.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="603.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CoursePreferencesController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#36465d" height="608.0" layoutY="-3.0" stroke="BLACK" strokeType="INSIDE" width="671.0" />
       <Text fill="WHITE" layoutX="192.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course Preferences">
