--- a/src/main/resources/fxml/Scheduler.fxml
+++ b/src/main/resources/fxml/Scheduler.fxml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.effect.*?>
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.ListView?>
@@ -15,25 +7,38 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="726.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="726.0" prefWidth="1200.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#36465d" height="727.0" layoutX="-1.0" layoutY="-1.0" stroke="TRANSPARENT" strokeType="INSIDE" width="1202.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="-1.0" />
       <Group fx:id="sidePanel">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="726.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="202.0" />
-            <Group fx:id="ScheduleCreationHelpers" />
-            <TabPane layoutY="65.0">
+            <AnchorPane prefHeight="725.0" prefWidth="208.0" styleClass="side-panel">
+               <children>
+                  <BorderPane styleClass="sp-lable">
+                     <center>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Scheduler">
+                           <font>
+                              <Font name="Avenir Roman" size="32.0" />
+                           </font>
+                        </Text>
+                     </center>
+                  </BorderPane>
+               </children>
+            </AnchorPane>
+            <TabPane layoutY="65.0" styleClass="tab-pane-side">
                <tabs>
                   <Tab text="Filters">
                      <content>
                         <Group fx:id="filtersTab">
                            <children>
-                              <Accordion prefHeight="517.0" prefWidth="202.0">
+                              <Accordion prefHeight="620.0" prefWidth="202.0">
                                       <panes>
                                         <TitledPane fx:id="currentSchedule" animated="false" text="Current Schedule">
                                           <content>
@@ -145,12 +150,6 @@
                   </Tab>
                </tabs>
             </TabPane>
-               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="66.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="202.0" />
-            <Text layoutX="26.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scheduler">
-               <font>
-                  <Font name="Avenir Roman" size="32.0" />
-               </font>
-            </Text>
          </children>
       </Group>
       <Group fx:id="calendar1" layoutY="19.0">
